--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Start Game!</h1>
+  <div class="btnPlay" type="button" id="btnPlay">
+    <h2 id="playBtn">play</h2>
+  </div>
+
   <div class="container">
     <div class="row">
 
